style(signup): fix select box font size on mobile

--- a/packages/fxa-content-server/app/styles/_media_queries.scss
+++ b/packages/fxa-content-server/app/styles/_media_queries.scss
@@ -70,7 +70,7 @@ only screen and (orientation:landscape) and (min-width:481px) and (max-height:48
   }
 
   .select-row select {
-    font-size: $base-font;
+    font-size: $base-font + $media-adjustment;
     padding: 10px 10% 11px $input-left-right-padding;
     width: 90%;
   }
@@ -103,7 +103,7 @@ only screen and (orientation:landscape) and (min-width:481px) and (max-height:48
     background-size: 120px 104px;
     height: 104px;
   }
-  
+
   .cannot-create-account-content {
     margin-top: 30px;
   }
